align, confirm button, alert fixes, some design changes were made by the teacher Rita, tysm

--- a/frontend/src/components/Income.css
+++ b/frontend/src/components/Income.css
@@ -1,3 +1,7 @@
+:root {
+    --toastify-color-success: #89BA16 !important;
+}
+
 body {
     background: #E0EAFC;
     background: -webkit-linear-gradient(to right, #cff3d2, #e0fce5);
@@ -51,12 +55,12 @@ body {
 
 .budget__income,
 .budget__expenses {
-    border-radius: 2em;
-    box-shadow: 0 10px 6px -6px #777;
+    /* border-radius: 2em; */
+    /* box-shadow: 0 10px 6px -6px #777; */
     color: #fff;
     font-size: 1.2em;
     margin: 0 auto;
-    padding: .75em;
+    padding: 1rem;
     text-transform: uppercase;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
 }
@@ -91,9 +95,9 @@ body {
 .add {
     background-color: #f7f7f7;
     border-bottom: 1px solid #e7e7e7;
-    border-radius: 1em;
-    box-shadow: 0 10px 6px -6px #777;
-    padding: 0.875em;
+    /* border-radius: 1em; */
+    /* box-shadow: 0 10px 6px -6px #777; */
+    padding: 1rem;
     text-align: center;
     margin: 0 auto;
 }
@@ -121,8 +125,10 @@ button {
 }
 
 .add__btn {
-    color: #2bbd68;
-    background-color: #e9e9e9;
+    color: #89BA16;
+    width: 25px;
+    height: auto;
+    /* background-color: #e9e9e9; */
     /* border-color: #575757; */
 }
 
